# ASP-Story_Generation

./: .gitignore  README.md  config.default.yaml  config.openai.yaml  config.response.yaml  openrouter.yaml  pyproject.toml  run_benchmark.py
benchmark/: __init__.py  artifact_writer.py  asp_validator.py  config.py  domain_registry.py  domains.py  experiment_runner.py  openrouter_client.py  parse_plan_cli.py  plan_parser.py  prompt_generator.py  utils.py
benchmark/asp/: action_utils.py  constraints_collector.py  validator.py
benchmark/author_mode/: __init__.py  western_author_validator.py
benchmark/cli/: __init__.py  args.py  resolve_paths.py  run_benchmark.py
benchmark/config/: config_loader.py  config_utils.py
benchmark/evaluators/: __init__.py  aladdin_evaluator.py  base.py  causal_evaluator.py  conflict_evaluator.py  intentionality_evaluator.py  secret_agent_evaluator.py  western_evaluator.py
benchmark/io/: artifact_writer.py  support_files_copier.py
benchmark/llm_clients/: anthropic_client.py  openai_client.py
benchmark/llm_post_processing/: author_plan_parser.py  plan_parser.py  secret_agent_plan_parser.py
benchmark/llm_provider/: openrouter_client.py
benchmark/parser/: plan_parser.py
benchmark/prompt_builders/: __init__.py  aladdin_prompt_builder.py  base_prompt_builder.py  prompt_builder.py  secret_agent_prompt_builder.py  western_prompt_builder.py
benchmark/prompts/: aladdin_prompt_builder.py  base_prompt_builder.py  prompt_builder.py  secret_agent_prompt_builder.py  western_prompt_builder.py
benchmark/reporting/: summary.py
(+2703 files in other folders)
