[project]
name = "asp-story-generation"
version = "0.1.0"
description = "Benchmark runner for the narrative planning pipeline (Secret Agent, Aladdin, Western) using uv-managed dependencies."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "PyYAML>=6.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.hatch.build.targets.wheel]
packages = ["benchmark"]
